--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.4"
+        "livewire/livewire": "^3.4",
+        "simplesoftwareio/simple-qrcode": "~4",
+        "wireui/wireui": "^1.18"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
