--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.4",
+        "maatwebsite/excel": "^3.1",
         "simplesoftwareio/simple-qrcode": "~4",
         "wireui/wireui": "^1.18"
     },
